--- a/public/json/admin/lang/sa.json
+++ b/public/json/admin/lang/sa.json
@@ -196,7 +196,7 @@
             "Clearance_Sale": "clearance sale",
             "out_of_stock": "إنتهى من المخزن",
             "click_for_details": "click for details",
-            "customer_Information": "customer information",
+            "customer_Information": "معلومات العميل",
             "name": "اسم",
             "contact": "اتصال",
             "wallet_balance": "Wallet balance",
@@ -209,9 +209,9 @@
             "delete": "يمسح",
             "image": "صورة",
             "tax_included": "Tax included",
-            "sub_total": "sub total",
-            "product_Discount": "Product discount",
-            "extra_Discount": "extra discount",
+            "sub_total": "المجموع الفرعي",
+            "product_Discount": "خصم المنتج",
+            "extra_Discount": "خصم اضافي",
             "coupon_Discount": "coupon discount",
             "tax": "ضريبة",
             "total": "المجموع",
@@ -223,9 +223,9 @@
             "ex": "السابق",
             "Change_Amount": "Change amount",
             "insufficient_balance": "توازن غير كاف",
-            "cancel_Order": "Cancel order",
-            "want_to_place_this_order": "want to place this order",
-            "place_Order": "place order",
+            "cancel_Order": "إلغاء الطلب",
+            "want_to_place_this_order": "تأكيد عمل الاوردر",
+            "place_Order": "عمل اوردر",
             "view_all_hold_orders": "view all hold orders",
             "print_Invoice": "print invoice",
             "times": "Times",
@@ -242,14 +242,14 @@
             "discount": "تخفيض",
             "items_Price": "العناصر",
             "item_discount": "item discount",
-            "extra_discount": "extra discount",
+            "extra_discount": "خصم اضافي",
             "subtotal": "نطاق فرعي",
             "VAT": "ضريبة القيمة المضافة",
             "coupon_discount": "coupon discount",
             "first_name": "الاسم الأول",
             "last_name": "اسم العائلة",
             "email": "بريد إلكتروني",
-            "enter_phone_number": "Enter phone number",
+            "enter_phone_number": "اضف رقم الموبايل",
             "country": "دولة",
             "city": "مدينة",
             "zip_code": "الرمز البريدي",
@@ -301,7 +301,7 @@
             "add_to_cart": "أضف إلى السلة",
             "cart_updated": "cart updated",
             "update_to_cart": "update to cart",
-            "cart_is_empty": "CART IS EMPTY",
+            "cart_is_empty": "لم تقم باضافة منتجات",
             "please_enter_a_valid_amount": "issy enter a valid amount",
             "paid_amount_is_less_than_total_amount": "pay amount is less than total amount",
             "coupon_is_invalid": "coupon is invalid",
@@ -390,7 +390,7 @@
             "pick_Exclude_from_product_to_display_product_price_and_tax_amount_separately": "Pick Exclude from product to display product price and tax amount separately",
             "include_with_product": "include with product",
             "exclude_with_product": "isclude with product",
-            "shipping_cost": "Shipping Cost",
+            "shipping_cost": "مصاريف الشحن",
             "set_the_shipping_cost_for_this_product_here_Shipping_cost_will_only_be_applicable_if_productwise_shipping_is_enabled": "Set the shipping cost for this product here Shipping cost will only be applicable if productwise shipping is enabled",
             "shipping_cost_multiply_with_quantity": "Shipping cost multiply with quantity",
             "if_enabled_the_shipping_charge_will_increase_with_the_product_quantity": "If enabled the shipping charge will increase with the product quantity",
@@ -1561,7 +1561,7 @@
             "SL": "SL",
             "order_ID": "order id",
             "total_Amount": "Total amount",
-            "product_Discount": "Product discount",
+            "product_Discount": "خصم المنتج",
             "coupon_Discount": "coupon discount",
             "referral_Discount": "endral discount",
             "shipping_Charge": "الشحن",
@@ -1744,7 +1744,7 @@
             "shop_name": "اسم المتجر",
             "customer_name": "customer name",
             "total_product_amount": "Total product amount",
-            "product_discount": "Product discount",
+            "product_discount": "خصم المنتج",
             "coupon_discount": "coupon discount",
             "referral_Discount": "endral discount",
             "discounted_amount": "مخفضة",
@@ -5146,7 +5146,7 @@
             "enter_the_title_that_will_be_shown_for_this_shipping_method": "Enter the title that will be shown for this shipping method",
             "Shipping_Duration": "مدة الشحن",
             "set_up_the_timeframe_for_the_shipping_method": "set up the timeframe for the shipping method",
-            "Shipping_Cost": "Shipping Cost",
+            "Shipping_Cost": "مصاريف الشحن",
             "define_the_cost_based_on_the_time_frame": "define the cost based on the time frame",
             "list_of_order_wise_shipping_method": "list of order wise shipping method",
             "Search_by_title": "Search by title",
